---------------------------------------------------------------------------------------------------
Version: 1.9.7
Date: 13.1.2019
  Features:
    - added limit stops per tick setting
---------------------------------------------------------------------------------------------------
Version: 1.9.6
Date: 12.12.2018
  Features:
    - added logistic port if cargo ships is active
  Changes:
    - performance tweaks
  Bugfixes:
    - handle layered icons of different sizes
---------------------------------------------------------------------------------------------------
Version: 1.9.5
Date: 7.12.2018
  Changes:
    - license exempts streaming from no commercial
---------------------------------------------------------------------------------------------------
Version: 1.9.4
Date: 16.11.2018
  Features:
    - lamp colors can also be read through red wire
    - cables from hidden combinator to lamp no longer originate in the middle of the lamp sprite
---------------------------------------------------------------------------------------------------
Version: 1.9.3
Date: 23.10.2018
  Bugfixes:
    - fix corrupted stops in on_configuration_changed
    - remove corrupt stops if fixing fails
---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: 15.10.2018
  Bugfixes:
    - left over init from 1.9.0 caused error #141
  Changes:
    - renamed remote interface ltn-interface to logistic-train-network
---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 14.10.2018
  Bugfixes:
    - stops are removed before surface deletion #139
    - added creative mode blacklisting to on_load
  Changes:
    - turned remote interface callbacks into events
    - added interface demo to /Interface_Demo/control.lua
---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 11.10.2018
  Features: