@@ -49,7 +49,7 @@ error-duplicated-unit-number=[LTN] Fehler: doppelte unit_number __1__.
 error-stop-orientation=[LTN] Fehler: ungültige Heltestellen Ausrichtung __1__.
 error-parse-item=[LTN] Fehler: could not parse item __1__.
 error-no-stop=[LTN] Fehler: Kein Anbieter oder Anforderer gefunden.
-error-invalid-stop=[LTN] Fehler: ungültige Haltestelle: __1__
+error-invalid-stop=[LTN] Fehler: ungültige Haltestelle __1__ entfernt.
 error-stop-output-truncated=[LTN] Fehler: Inventar von Zug __1__ in Haltestelle __2__ übersteigt Ausgabekapazität von __3__ um __4__ Signale.
 warning-dispatcher-disabled=[LTN] Warnung: Disponent deaktiviert. Es werden keine Lieferungen generiert.
 
