@@ -49,7 +49,7 @@ error-duplicated-unit-number=[LTN] Error: Duplicated unit_number __1__.
 error-stop-orientation=[LTN] Error: invalid train stop orientation __1__.
 error-parse-item=[LTN] Error: could not parse item __1__.
 error-no-stop=[LTN] Error: Couldn't get provider or requester stop.
-error-invalid-stop=[LTN] Error: Invalid stop: __1__
+error-invalid-stop=[LTN] Error: Invalid stop __1__ removed.
 error-stop-output-truncated=[LTN] Error: Inventory of train __2__ at stop __1__ exceeds stop output limit of __3__ by __4__ signals.
 warning-dispatcher-disabled=[LTN] Warning: Dispatcher disabled. No deliveries will be created.
 
