@@ -3,6 +3,7 @@ Version: 1.9.7
 Date: 13.1.2019
   Features:
     - added limit stops per tick setting
+    - remove IO entities and references when finding invalid stops at runtime
 ---------------------------------------------------------------------------------------------------
 Version: 1.9.6
 Date: 12.12.2018
